package com.irina.myfirstgame.systems;

import com.irina.myfirstgame.entities.valueobjects.Vector2;

/**
 * Émetteur de particules pour le système de particules.
 * <p>
 * Stub pour une fonctionnalité future d'émission de particules.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Emitter {
    private float emissionRate;
    
    public void emit(Vector2 position) {
    }
    
    public void stop() {
    }
}

