package com.irina.myfirstgame.systems;

import com.irina.myfirstgame.core.Preferences;

/**
 * Gère la lecture des sons et musiques du jeu.
 * <p>
 * Stub pour une fonctionnalité future de gestion audio.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class AudioManager {
    private Preferences preferences;
    
    public void play(String soundId) {
    }
    
    public void stop(String soundId) {
    }
    
    public void setVolume(float value) {
    }
}

